Clean up RSVP+invitations stack after backend PR #21
PR #21 landed the invitations infrastructure but with several blockers
and bugs. This commit fixes everything needed to compile, boot, and
align with the Outlook-strict design locked in the handoff doc.

Compile blockers
- BookingRequest.java had a 7-arg constructor referencing the deleted
  rsvpList field (and missing the HashSet import). Removed.
- DatabaseConnector.findInvitationsByUser was a broken try{} stub with
  no body or catch -- "'try' without 'catch'" compile error. Replaced
  with the real impl (double-JOIN on users for host + invitee, aliased
  columns).
- DatabaseConnector.findBookingById was constructing BookingRequest
  with 7 args. Switched to 4-arg + setStatus(); the fetched rsvplist
  has nowhere to go now and is no longer needed.

Schema
- schema.sql had two CREATE TABLE invitations statements (the valid
  one and a syntactically broken duplicate). Deleted the duplicate.

Backend method bugs
- searchUsers: case-insensitive prefix LIKE (was case-sensitive, no
  wildcard); always returns a list (was null); single SELECT * with
  userFromRow (was N+1 via findUserById); drops the rs.next() pre-check
  that consumed row 1 and made single-match results return null.
- insertInvitation / updateInvitationStatus: column name aligned to
  'status' (was 'invitation_status', which didn't match the kept
  schema's column).
- Added findInvitationsByBooking (handoff doc §3.5) for the future
  host-side "View invitees" dialog.
- Added countAcceptedInvitees (handoff doc §3.6) -- attendee count
  under the invite-only model. Replaces FE reads of legacy countRsvps.

FE migration to Outlook-strict (handoff doc §A1)
- BrowseBookingsView: dropped the "Open bookings" section + self-RSVP
  path entirely. Now a single "Your invitations" grid with Accept /
  Decline (both reversible). No more rsvp-table writes from this view.
- MyBookingsView: "RSVPs" column -> "Attending", backed by
  countAcceptedInvitees.

Validator 